tdf#88824: Remove FactoryLoader threads causing deadlock on Windows

...and assumed to be merely performance optimizations (so removing them should
hopefully not break any functionality).

Change-Id: I9f40118f5a4bd1526e0cfbf74715455d543bfd54